--- a/components/tooltip/src/partials/_vwc-tooltip-variables.scss
+++ b/components/tooltip/src/partials/_vwc-tooltip-variables.scss
@@ -1,3 +1,2 @@
 //sizes variables
-$tooltip-min-inline-size: --tooltip-min-inline-size;
-$tooltip-max-inline-size: --tooltip-max-inline-size;
+$tooltip-inline-size: --tooltip-inline-size;
