--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -26,10 +26,15 @@
 	}
 }
 
+.wrapper-headline {
+	padding: 0;
+	margin: 0;
+}
 .expansion-panel-header {
 	@include typography.typography-cat-shorthand('subtitle-2');
 	position: relative;
 	display: flex;
+	width: 100%;
 	align-items: flex-end;
 	padding: 16px;
 	border: 0 none;
@@ -37,10 +42,14 @@
 	cursor: pointer;
 	text-align: left;
 
+
 	.leading-icon,
 	.trailing-icon {
 		display: flex;
-		margin-bottom: 4px;
+
+		:host(:not([dense])) & {
+			margin-bottom: 4px;
+		}
 
 		vwc-icon {
 			#{icon-variables.$icon-size-variable-name}: var(#{expansion-panel-variables.$expansion-panel-icon-size-variable-name}, 20px);
@@ -73,10 +82,13 @@
 		max-width: 20%;
 		flex-shrink: 0;
 		color: var(--vvd-color-neutral-60);
-		margin-block-end: 4px;
+
 		margin-inline-start: 1rem;
 		text-overflow: ellipsis;
 		white-space: nowrap;
+		:host(:not([dense])) & {
+			margin-block-end: 4px;
+		}
 
 	}
 
@@ -90,8 +102,6 @@
 	}
 
 	.trailing-icon {
-		//margin-inline-start: auto;
-
 		/* stylelint-disable selector-no-qualifying-type */
 		vwc-icon,
 		slot[name="trailingIcon"i]::slotted(vwc-icon) {
@@ -128,5 +138,8 @@
 	}
 	.meta {
 		@include typography.typography-cat-shorthand('caption-bold');
+	}
+	vwc-icon {
+		--vvd-expansion-panel-icon-size: 16px;
 	}
 }
