add test for all header texts & css fix

--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -78,6 +78,7 @@
 		color: var(--vvd-color-neutral-70);
 		grid-area: meta;
 		margin-inline-start: 1rem;
+		text-align: end;
 		text-overflow: ellipsis;
 		white-space: nowrap;
 	}
