--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -35,6 +35,7 @@
 	@include typography.typography-cat-shorthand('subtitle-2');
 	position: relative;
 	display: grid;
+	width: 100%;
 	align-items: center;
 	padding: 16px;
 	border: 0 none;
