--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -34,21 +34,13 @@
 .expansion-panel-button {
 	@include typography.typography-cat-shorthand('subtitle-2');
 	position: relative;
-	display: grid;
+	display: flex;
 	width: 100%;
 	align-items: center;
 	padding: 16px;
 	border: 0 none;
 	background: transparent;
 	cursor: pointer;
-	grid-template-areas: '. caption . .' 'leading header meta trailing';
-	grid-template-columns: auto 1fr auto auto;
-	grid-template-rows: auto auto;
-	text-align: left;
-
-	&.with-meta {
-		grid-template-columns: auto 1fr 0.35fr auto;
-	}
 
 	.leading-icon,
 	.trailing-icon {
@@ -63,26 +55,21 @@
 		/* stylelint-disable value-no-vendor-prefix */
 		display: -webkit-box;
 		overflow: hidden;
+		flex-grow: 1;
 		-webkit-box-orient: vertical;
-		grid-area: header;
 		-webkit-line-clamp: 2;
 		/* stylelint-enable property-no-vendor-prefix */
 		/* stylelint-enable value-no-vendor-prefix */
 		margin-inline-end: auto;
-	}
-
-	.caption {
-		@include typography.typography-cat-shorthand('body-2');
-		color: var(--vvd-color-neutral-80);
-		grid-area: caption;
+		text-align: left;
 	}
 
 	.meta {
 		@include typography.typography-cat-shorthand('body-2-bold');
 		overflow: hidden;
+		max-width: 20%;
 		flex-shrink: 0;
 		color: var(--vvd-color-neutral-70);
-		grid-area: meta;
 		margin-inline-start: 1rem;
 		text-align: end;
 		text-overflow: ellipsis;
@@ -90,7 +77,6 @@
 	}
 
 	.leading-icon {
-		grid-area: leading;
 		/* stylelint-disable selector-no-qualifying-type */
 		vwc-icon,
 		slot[name="icon"i]::slotted(vwc-icon) {
@@ -100,7 +86,6 @@
 	}
 
 	.trailing-icon {
-		grid-area: trailing;
 		/* stylelint-disable selector-no-qualifying-type */
 		vwc-icon,
 		slot[name="trailingIcon"i]::slotted(vwc-icon) {
@@ -131,9 +116,6 @@
 :host([dense]) {
 	.expansion-panel-button {
 		@include typography.typography-cat-shorthand('body-2-bold');
-	}
-	.caption {
-		@include typography.typography-cat-shorthand('caption');
 	}
 	.meta {
 		@include typography.typography-cat-shorthand('caption-bold');
