class name change

--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -50,7 +50,7 @@
 			#{icon-variables.$icon-size-variable-name}: var(#{expansion-panel-variables.$expansion-panel-icon-size-variable-name}, 20px);
 		}
 	}
-	.header-text {
+	.heading-text {
 		/* stylelint-disable property-no-vendor-prefix */
 		/* stylelint-disable value-no-vendor-prefix */
 		display: -webkit-box;
