feat(accordion): add meta (#1225)
* expansion panel caption and meta

* adding ui-test and story

* updating test snapshot

* updating ui-test snapshot

* meta-data color

* fix alignment panel header

* update tests

* remove h3 tag

* remove h3 tag

* add tests

* Update components/expansion-panel/test/expansion-panel.test.js

Co-authored-by: Yonatan Kra <yonatan.kra@vonage.com>

* Update components/expansion-panel/test/expansion-panel.test.js

Co-authored-by: Yonatan Kra <yonatan.kra@vonage.com>

* Update components/expansion-panel/test/expansion-panel.test.js

Co-authored-by: Yonatan Kra <yonatan.kra@vonage.com>

* fix class name in test

* add test for all header texts & css fix

* fix test

* fix merge issues

* fix merge issues

* remove caption

* change metaData to meta

* class name change

* class name change

* remove line trim

Co-authored-by: Yonatan Kra <yonatan.kra@vonage.com>

--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -50,6 +50,23 @@
 			#{icon-variables.$icon-size-variable-name}: var(#{expansion-panel-variables.$expansion-panel-icon-size-variable-name}, 20px);
 		}
 	}
+	.heading-text {
+		flex-grow: 1;
+		margin-inline-end: auto;
+		text-align: left;
+	}
+
+	.meta {
+		@include typography.typography-cat-shorthand('body-2-bold');
+		overflow: hidden;
+		max-width: 20%;
+		flex-shrink: 0;
+		color: var(--vvd-color-neutral-70);
+		margin-inline-start: 1rem;
+		text-align: end;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+	}
 
 	.leading-icon {
 		/* stylelint-disable selector-no-qualifying-type */
@@ -61,8 +78,6 @@
 	}
 
 	.trailing-icon {
-		margin-inline-start: auto;
-
 		/* stylelint-disable selector-no-qualifying-type */
 		vwc-icon,
 		slot[name="trailingIcon"i]::slotted(vwc-icon) {
@@ -93,5 +108,11 @@
 :host([dense]) {
 	.expansion-panel-button {
 		@include typography.typography-cat-shorthand('body-2-bold');
+	}
+	.meta {
+		@include typography.typography-cat-shorthand('caption-bold');
+	}
+	vwc-icon {
+		--vvd-expansion-panel-icon-size: 16px;
 	}
 }
