feat(dialog): custom top position (#1226)
* feat(dialog): custom top position

* limit top position to 4 predefined sizes

* Update components/dialog/src/vwc-dialog.ts

Co-authored-by: yinon <yinon@hotmail.com>

* Update components/dialog/src/vwc-dialog.ts

Co-authored-by: yinon <yinon@hotmail.com>

* scss variable use

Co-authored-by: yinon <yinon@hotmail.com>

--- a/components/dialog/src/vwc-dialog.scss
+++ b/components/dialog/src/vwc-dialog.scss
@@ -71,3 +71,26 @@
 		width: 100%;
 	}
 }
+
+.mdc-dialog {
+	$top-position: --_top-position;
+	:host([topPosition='small']) &,
+	:host([topPosition='medium']) &,
+	:host([topPosition*='large']) & {
+		top: var(#{$top-position});
+		height: auto;
+	}
+
+	:host([topPosition='small']) & {
+		#{$top-position}: 40px;
+	}
+	:host([topPosition='medium']) & {
+		#{$top-position}: 80px;
+	}
+	:host([topPosition='large']) & {
+		#{$top-position}: 120px;
+	}
+	:host([topPosition='xlarge']) & {
+		#{$top-position}: 160px;
+	}
+}
