--- a/components/text/src/vwc-text.scss
+++ b/components/text/src/vwc-text.scss
@@ -1,49 +1,80 @@
+
+@use 'sass:list';
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-design-tokens/build/scss/typography-variables/web' as typography-scale;
 @use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
 	$connotations-set: primary cta announcement info success alert,
-	$default: primary,
 );
 @use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 
+$font-faces: ();
 
-.vwc-text {
-	@include typography.typography-cat-shorthand('body-1');
+@each $key, $value in typography-scale.$typography-category-list {
+	$font-faces: list.join($font-faces, $key, $separator: comma);
+}
+
+@function get-default-selector($font-faces) {
+	$classes: ();
+
+	@each $font-face in $font-faces {
+		$classes: list.join($classes, '.font-face-#{$font-face}', $separator: comma);
+	}
+
+	@return '&:not(#{$classes})';
+}
+
+$default-selector: get-default-selector($font-faces);
+
+%not-tight {
+	&:not(.tight) {
+		display: block;
+		margin: var(--font-face-margin, 0);
+	}
+}
+
+.control {
+
 	@include connotation.connotation;
+
 	color: var(#{connotation.$vvd-color-connotation});
 
-	@each $key, $value in typography-scale.$typography-category-list {
-		&.font-face-#{$key} {
-			@include typography.typography-cat-shorthand($key);
-		}
+	#{$default-selector} {
+		@include typography.typography-cat-shorthand('body-1');
 	}
 
-	&.font-face {
-		&-headline-1,
-		&-headline-2 {
-			--font-face-margin: 2.5rem 0;
-		}
-
-		&-title-1,
-		&-title-2 {
-			--font-face-margin: 2rem 0;
-		}
-
-		&-subtitle-1,
-		&-subtitle-2 {
-			--font-face-margin: 1.5rem 0;
-		}
-
-		&-body-1,
-		&-body-2 {
-			--font-face-margin: 1rem 0;
-		}
+	&.font-face-headline-1,
+	&.font-face-headline-2 {
+		--font-face-margin: 2.5rem 0;
+		@extend %not-tight;
 	}
 
-	&:not(.tight) {
-		&:where(.font-face-headline-1, .font-face-headline-2, .font-face-title-1, .font-face-title-2, .font-face-subtitle-1, .font-face-subtitle-2, .font-face-body-1, .font-face-body-2) {
-			display: block;
-			margin: var(--font-face-margin, 0);
+	&.font-face-title-1,
+	&.font-face-title-2 {
+		--font-face-margin: 2rem 0;
+		@extend %not-tight;
+	}
+
+	&.font-face-subtitle-1,
+	&.font-face-subtitle-2 {
+		--font-face-margin: 1.5rem 0;
+		@extend %not-tight;
+	}
+
+	#{$default-selector},
+	&.font-face-body-1,
+	&.font-face-body-1-bold,
+	&.font-face-body-1-code,
+	&.font-face-body-1-link,
+	&.font-face-body-2,
+	&.font-face-body-2-bold,
+	&.font-face-body-2-code,
+	&.font-face-body-2-link {
+		--font-face-margin: 1rem 0;
+		@extend %not-tight;
+	}
+	@each $font-face in $font-faces {
+		&.font-face-#{$font-face} {
+			@include typography.typography-cat-shorthand(#{$font-face});
 		}
 	}
 }
