--- a/components/list/src/vwc-list-item.scss
+++ b/components/list/src/vwc-list-item.scss
@@ -51,6 +51,15 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 }
 
 :host([activated]) {
+	z-index: 0;
+	mwc-ripple,
+	.fake-activated-ripple {
+		--mdc-ripple-activated-opacity: 0;
+		z-index: -1;
+	}
+}
+
+:host([activated]:not([disabled])) {
 	--mdc-theme-text-icon-on-background: var(
 		#{connotation.$vvd-color-on-connotation},
 		var(#{scheme-variables.$vvd-color-on-canvas})
@@ -64,17 +73,10 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 		var(#{scheme-variables.$vvd-color-on-canvas})
 	);
 
-	@include typography.typography-cat-shorthand('body-2-bold');
-	z-index: 0;
 	color: var(
 		#{connotation.$vvd-color-on-connotation},
 		var(#{scheme-variables.$vvd-color-on-canvas})
 	);
-
-	mwc-ripple,
-	.fake-activated-ripple {
-		z-index: -1;
-	}
 
 	.fake-activated-ripple {
 		--mdc-ripple-activated-opacity: 1;
@@ -85,7 +87,6 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 	}
 
 	mwc-ripple {
-		--mdc-ripple-activated-opacity: 0;
 		background-color: var(
 			#{connotation.$vvd-color-connotation},
 			var(#{scheme-variables.$vvd-color-neutral-30})
@@ -129,9 +130,14 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 }
 
 
-::slotted(*) {
-	:host(:not([disabled])) .mdc-deprecated-list-item__graphic &,
-	:host(:not([disabled])) .mdc-deprecated-list-item__meta & {
-		color: var(#{scheme-variables.$vvd-color-neutral-70});
+:host(:not([disabled])) {
+	.mdc-deprecated-list-item__graphic,
+	.mdc-deprecated-list-item__meta {
+		::slotted(*) {
+			color: var(
+				#{connotation.$vvd-color-on-connotation},
+				var(#{scheme-variables.$vvd-color-neutral-70})
+			);
+		}
 	}
 }
