--- a/components/card/src/vwc-card.scss
+++ b/components/card/src/vwc-card.scss
@@ -12,10 +12,10 @@
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.05), 0 8px 8px rgba(0, 0, 0, 0.05), 0 2px 16px rgba(0, 0, 0, 0.1);
 	color: var(#{scheme-variables.$vvd-color-on-canvas});
 
-	&-info {
+	&-content {
 		display: flex;
 		flex-flow: column;
-		padding: 1rem 1rem 1.5rem 1.5rem;
+		padding: 1.5rem;
 	}
 
 	&-header {
@@ -30,8 +30,6 @@
 
 		&-content {
 			display: inline-flex;
-			padding-top: 0.5rem;
-			padding-right: 0.5rem;
 		}
 	}
 
@@ -69,8 +67,9 @@
 		display: inline-flex;
 		flex-direction: column;
 		align-items: flex-end;
-		margin-top: 16px;
-		margin-right: 0.5rem;
+		padding-bottom: 1.5rem;
+		margin-top: auto;
+		padding-inline: 1.5rem;
 	}
 }
 
@@ -86,9 +85,11 @@
 	height: 20px;
 }
 
-::slotted([slot="actionItem"i]) {
+::slotted([slot="meta"i]) {
 	flex-shrink: 0;
 	align-self: flex-start;
+	margin-block-start: -0.5rem;
+	margin-inline-end: -0.5rem;
 }
 
 .no-content {
