--- a/components/card/src/vwc-card.scss
+++ b/components/card/src/vwc-card.scss
@@ -24,7 +24,7 @@
 		justify-content: space-between;
 		gap: 0.5rem;
 
-		:host([supporting-text]) & {
+		:host([card-text]) & {
 			margin-bottom: 12px;
 		}
 
