disable length-zero-no-unit

--- a/components/fab/src/vwc-fab.scss
+++ b/components/fab/src/vwc-fab.scss
@@ -14,9 +14,9 @@
 		--mdc-theme-on-secondary: unset;
 
 		--mdc-fab-extended-label-padding: 20px;
-		--mdc-fab-extended-icon-padding: 0;
+		--mdc-fab-extended-icon-padding: 0px;
 		--mdc-fab-focus-outline-color: initial;
-		--mdc-fab-focus-outline-width: 0;
+		--mdc-fab-focus-outline-width: 0px;
 
 		--mdc-theme-secondary: var(
 			#{connotation.$vvd-color-connotation},
