feat(tags): support removable

--- a/components/tags/src/vwc-tag.scss
+++ b/components/tags/src/vwc-tag.scss
@@ -126,3 +126,11 @@
 // 	}
 // }
 
+.remove-button {
+	all: unset;
+	margin-inline-start: 10px;
+
+	.vwc-tag__icon {
+		--vvd-icon-size: 10px;
+	}
+}
