--- a/components/calendar/src/vwc-calendar.scss
+++ b/components/calendar/src/vwc-calendar.scss
@@ -1,9 +1,9 @@
 @use 'partials/vwc-calendar-variables' as calendar-variables;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '@vonage/vvd-typography/scss/typography';
-@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with (
-	$variable-name: #{calendar-variables.$calendar-shape})
-;
+@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with(
+	$variable-name: #{calendar-variables.$calendar-shape}
+);
 
 @include shape-mixins.shape(
 	$shapes: (
@@ -28,18 +28,6 @@ ol {
 	grid-template-columns: min-content auto;
 	inline-size: max(100%, 500px);
 	min-inline-size: 880px;
-
-	&::before {
-		position: sticky;
-		z-index: 1;
-		top: 0;
-		display: block;
-		margin-bottom: 0.5rem;
-		background-color: var(#{scheme-variables.$vvd-color-surface-2dp});
-		content: '';
-		grid-column: 1/2;
-		grid-row: 1/2;
-	}
 }
 
 .row-headers {
@@ -62,41 +50,33 @@ ol {
 }
 
 .column-headers {
-	position: sticky;
-	z-index: 1;
-	top: 0;
 	display: grid;
 	grid-area: column-headers;
 	grid-template-columns: repeat(calendar-variables.$total-columns, 1fr);
-
 	[role="columnheader"i] {
 		h2 {
-			padding: 0.25rem 0;
-			margin: 0 0 0.5rem;
-			background-color: var(#{scheme-variables.$vvd-color-surface-2dp});
-		}
-
-		time {
 			@include typography.typography-cat-shorthand('subtitle-2');
-			display: grid;
-			align-items: center;
-			grid-template-columns: 1fr auto 1fr;
-			justify-items: center;
-
+			position: relative;
+			margin: 0;
+			text-align: center;
 			> em {
+				position: absolute;
 				font: inherit;
-				justify-self: flex-start;
-
+				@supports (inset: 0) {
+					inset-inline-start: 0;
+				}
+				@supports not (inset: 0) {
+					left: 0;
+				}
 			}
-
 			> small {
 				@include typography.typography-cat-shorthand('caption');
 				text-transform: uppercase;
 			}
 		}
 	}
-
 }
+
 .calendar-row {
 	display: contents;
 }
@@ -148,18 +128,17 @@ ol {
 		position: relative;
 		grid-column: var(--column);
 		grid-row: 1 / #{calendar-variables.$total-rows + 1};
-
+		@for $i from 1 through calendar-variables.$total-columns {
+			&:nth-child(#{$i}) {
+				--column: #{$i};
+			}
+		}
 		&:not(:first-child)::after {
 			position: absolute;
 			block-size: 100%;
 			border-inline-end: var(#{scheme-variables.$vvd-color-neutral-20}) 1px solid;
 			content: '';
 			margin-inline-start: -1px;
-		}
-		@for $i from 1 through calendar-variables.$total-columns {
-			&:nth-child(#{$i}) {
-				--column: #{$i};
-			}
 		}
 	}
 }
