feat(card): redefine interface (#1131)
* feat(card): top action slot

* action right side padding change

* viv-771-card-action-slot #comment css fix

* slot description fix

* viv-771-card-action-slot #comment change slot name

* viv-771-card-action-slot #comment html structure changes and css fixes

* change Actions slot name to footer

* feat(card): structure and meta slot

* property name change and readme update

* code review changes

* properties name change

* update test md

* slot name

* update snapshot

* update snapshot

* Update components/card/test/card.test.js

Co-authored-by: Rina <rina.oksman@vonage.com>
Co-authored-by: Yonatan Kra <yonatan.kra@vonage.com>

--- a/components/card/src/vwc-card.scss
+++ b/components/card/src/vwc-card.scss
@@ -12,14 +12,25 @@
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.05), 0 8px 8px rgba(0, 0, 0, 0.05), 0 2px 16px rgba(0, 0, 0, 0.1);
 	color: var(#{scheme-variables.$vvd-color-on-canvas});
 
-	&-info {
+	&-content {
 		display: flex;
 		flex-flow: column;
-		padding: 24px;
+		padding: 1.5rem;
 	}
 
 	&-header {
 		display: flex;
+		align-items: flex-start;
+		justify-content: space-between;
+		gap: 0.5rem;
+
+		:host([text]) & {
+			margin-bottom: 12px;
+		}
+
+		&-content {
+			display: inline-flex;
+		}
 	}
 
 	&-title,
@@ -35,7 +46,6 @@
 
 	&-title {
 		@include typography.typography-cat-shorthand('subtitle-2');
-		margin-bottom: 4px;
 		-webkit-line-clamp: var(#{card-variables.$title-line-clamp});
 	}
 
@@ -44,39 +54,42 @@
 	}
 
 	&-subtitle,
-	&-supportText {
+	&-text {
 		@include typography.typography-cat-shorthand('body-2');
 		color: var(#{scheme-variables.$vvd-color-neutral-70});
 	}
 
-	&-actions {
+	&-text {
+		padding-right: 0.5rem;
+	}
+
+	&-footer {
 		display: inline-flex;
 		flex-direction: column;
 		align-items: flex-end;
-		margin-top: 16px;
+		padding-bottom: 1.5rem;
+		margin-top: auto;
+		padding-inline: 1.5rem;
 	}
 }
 
-header {
-	display: inline-flex;
-	flex-direction: column;
-	align-content: space-between;
-
-	:host([supporting-text]) & {
-		margin-bottom: 12px;
-	}
-}
-
-::slotted([slot="graphics"i]),
-.header-icon {
+::slotted([slot="graphic"i]),
+.icon {
 	flex-shrink: 0;
 	align-self: baseline;
 	margin: 4px 10px 0 0;
 }
 
-.header-icon {
+.icon {
 	width: 20px;
 	height: 20px;
+}
+
+::slotted([slot="meta"i]) {
+	flex-shrink: 0;
+	align-self: flex-start;
+	margin-block-start: -0.5rem;
+	margin-inline-end: -0.5rem;
 }
 
 .no-content {
