--- a/components/card/src/vwc-card.scss
+++ b/components/card/src/vwc-card.scss
@@ -5,11 +5,10 @@
 .vwc-card {
 	display: flex;
 	overflow: hidden;
+	height: inherit;
 	flex-flow: column;
-	background-color: var(#{scheme-variables.$vvd-color-canvas});
 	block-size: inherit;
 	border-radius: 6px;
-	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.05), 0 8px 8px rgba(0, 0, 0, 0.05), 0 2px 16px rgba(0, 0, 0, 0.1);
 	color: var(#{scheme-variables.$vvd-color-on-canvas});
 
 	&-content {
@@ -96,5 +95,8 @@
 	display: none;
 }
 
+::slotted(*) {
+	height: inherit;
+}
 
 
