fix alternate in popup

--- a/components/popup/src/vwc-popup.scss
+++ b/components/popup/src/vwc-popup.scss
@@ -7,11 +7,12 @@
 	z-index: 7;
 }
 
+$popup-border-radius: --_border-radius-size;
+
 .popup {
-	--border-radius-size: 6px;
+	--_border-radius-size: 6px;
 	width: min-content;
-	background-color: var(#{scheme-variables.$vvd-color-surface-4dp});
-	border-radius: var(--border-radius-size);
+	border-radius: var(#{$popup-border-radius});
 	contain: layout;
 	&:not(.popup-open) {
 		display: none;
@@ -23,6 +24,8 @@
 
 	&-content {
 		display: grid;
+		background-color: var(#{scheme-variables.$vvd-color-surface-4dp});
+		border-radius: inherit;
 		.popup-dismissible & {
 			align-content: start;
 			grid-template-columns: 1fr auto;
