--- a/components/card/src/vwc-card.scss
+++ b/components/card/src/vwc-card.scss
@@ -3,16 +3,16 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 
 .vwc-card {
-	display: flex;
-	flex-flow: column;
 	block-size: 100%;
 	border-radius: 6px;
-	color: var(#{scheme-variables.$vvd-color-on-canvas});
-	@supports(contain: content) {
-		contain: content;
-	}
-	@supports not (contain: content) {
+
+	&-container {
+		display: flex;
 		overflow: hidden;
+		flex-flow: column;
+		block-size: inherit;
+		border-radius: inherit;
+		color: var(#{scheme-variables.$vvd-color-on-canvas});
 	}
 
 	&-content {
