--- a/components/card/src/vwc-card.scss
+++ b/components/card/src/vwc-card.scss
@@ -3,14 +3,17 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 
 .vwc-card {
-	display: flex;
-	overflow: hidden;
-	flex-flow: column;
-	background-color: var(#{scheme-variables.$vvd-color-canvas});
-	block-size: inherit;
+	block-size: 100%;
 	border-radius: 6px;
-	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.05), 0 8px 8px rgba(0, 0, 0, 0.05), 0 2px 16px rgba(0, 0, 0, 0.1);
-	color: var(#{scheme-variables.$vvd-color-on-canvas});
+
+	&-container {
+		display: flex;
+		overflow: hidden;
+		flex-flow: column;
+		block-size: inherit;
+		border-radius: inherit;
+		color: var(#{scheme-variables.$vvd-color-on-canvas});
+	}
 
 	&-content {
 		display: flex;
@@ -96,5 +99,11 @@
 	display: none;
 }
 
+vwc-elevation {
+	block-size: inherit;
+	&::part(base) {
+		block-size: inherit;
+	}
+}
 
 
