--- a/components/surface/src/vwc-surface.scss
+++ b/components/surface/src/vwc-surface.scss
@@ -7,7 +7,6 @@ $surface-border-radius: --vvd-surface-border-radius;
 	.mdc-menu-surface {
 		background-color: var(#{scheme-variables.$vvd-color-surface-8dp});
 		border-radius: var(#{$surface-border-radius}, $default-surface-border-radius);
-		box-shadow: none; /*to remove the mdc box-shadow*/
-		filter: var(#{scheme-variables.$vvd-shadow-surface-8dp});
+		box-shadow: 0 6px 8px rgba(0, 0, 0, 0.05), 0 12px 16px rgba(0, 0, 0, 0.05), 0 4px 24px rgba(0, 0, 0, 0.1);
 	}
 }
